--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ configurations {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
 
     // ✅ Lombok 의존성
     compileOnly 'org.projectlombok:lombok'
