--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=upload
+logging.level.org.apache.coyote.http11=trace
+#spring.servlet.multipart.enabled=false
+
+file.dir=C:/Users/skymo/study_inflearn/spring/4-mvc/4-mvc2_8/file/
